--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,17 @@ body {
   --bg-primary: #fff;
   --subtitle-color: #777;
   --copyright-color: #a8a8a8;
+  --dialog-color: #696868;
   --bg-dot: #ffc500;
   --primary-hover-color: #ddad0f;
   --icon-color: #000;
   --connector-color: #eee;
   --link-color: #787878;
+  --service-color: darkslategray;
 }
+
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@700&display=swap');
 
 .container-shadow{
   box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.13);
